<resources>
    <string name="app_name">EventPlannerApp</string>
    <string name="welcome_to_eventease">Welcome to EventEase</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in_to_eventease">Log In to EventEase</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="add">Add new</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sign_in_to_eventease">Sign in to EventEase</string>
    <string name="declineReportNotificationTitle">Report successfully declined!</string>
    <string name="everythingOk">Good news, everything is okay!</string>
    <string name="sysInfo">System information</string>
    <string name="acceptReportNotificationTitle">Your account is blocked!</string>
    <string name="newReportNotificationTitle">You have new reports!</string>
    <string name="newReportNotificationText">Check report list to see new reports.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_as">Register as:</string>
    <string name="organizer">Organizer</string>
    <string name="owner">Owner</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Name</string>
    <string name="lastname">Lastname:</string>
    <string name="lastnameHint">Lastname</string>
    <string name="address">Address:</string>
    <string name="addressHint">Address</string>
    <string name="phone_numberHint">Phone number</string>
    <string name="phone_number">Phone number:</string>
    <string name="select_image">Select Image</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="confirm_passwordHint">Confirm Password</string>
    <string name="emailNew">Email:</string>
    <string name="company_informations">Company informations</string>
    <string name="description">Description:</string>
    <string name="descriptionHint">Description</string>
    <string name="agency">Agency</string>
    <string name="company">Company</string>
    <string name="shop">Shop</string>
    <string name="organization">Organization</string>
    <string name="categories">Categories</string>
    <string name="hospitality_establishments">Hospitality establishments, food, catering, cakes, and pastries</string>
    <string name="accommodation">Accommodation</string>
    <string name="music_and_entertainment">Music and entertainment</string>
    <string name="photography_and_videography">Photography and videography</string>
    <string name="decoration_and_lighting">Decoration and lighting</string>
    <string name="wardrobe_and_styling">Wardrobe and styling</string>
    <string name="care_and_beauty">Care and beauty</string>
    <string name="planning_and_coordination">Planning and coordination</string>
    <string name="invitations_and_stationery">Invitations and stationery</string>
    <string name="logistics_and_security">Logistics and security</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_vlasnik">Go to Vlasnik</string>
    <string name="vlasnik_home">Vlasnik Home</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="filters">Filter</string>
    <string name="sort">Sort</string>
    <string name="price">Price:</string>
    <string name="category1">Restaurants, catering, food and cakes</string>
    <string name="category2">Accomodation</string>
    <string name="category3">Music and fun</string>
    <string name="category4">Photo and video</string>
    <string name="category5">Decoration and lighting</string>
    <string name="category6">Clothes and styling</string>
    <string name="category7">Beauty</string>
    <string name="category8">Planning and coordination</string>
    <string name="category9">Invitation cards</string>
    <string name="category10">Logistics and security</string>
    <string name="subcategory">Subcategory:</string>
    <string name="subcategory1">Catering and food preparing</string>
    <string name="subcategory2">Menu planning</string>
    <string name="subcategory3">Renting an object</string>
    <string name="subcategory4">Food for events</string>
    <string name="type_event">Type event:</string>
    <string name="available">Available?</string>
    <string name="visible">Visible?</string>
    <string name="image">Image:</string>
    <string name="location">Location:</string>
    <string name="specifics">Specifics:</string>
    <string name="in_charge">In charge:</string>
    <string name="reservation_deadline">Reservation deadline:</string>
    <string name="cancellation_deadline">Cancellation deadline:</string>
    <string name="automatic_accept">Automatic accept?</string>
    <string name="duration">Duration   (in hours):</string>
    <string name="discount">Discount  (in procents):</string>
    <string name="products">Include products:</string>
    <string name="services">Include services:</string>
    <string name="subcategory5">Drinks</string>
    <string name="subcategory6">Cakes and fruit</string>
    <string name="subcategory7">Special products</string>
    <string name="subcategory8">Photographing</string>
    <string name="subcategory9">Videography</string>
    <string name="subcategory10">Drone recording</string>
    <string name="subcategory11">Postproduction / editing</string>
    <string name="subcategory12">Photos and albums</string>
    <string name="subcategory13">Video materials</string>
    <string name="subcategory14">Digital products</string>
    <string name="subcategory15">Additional products</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="corporate">Corporate events (seminars, team buildings, fairs, exibitions, anniversaries...)</string>
    <string name="private_event">Private events(weddings, births, baby showers, birthdays...)</string>
    <string name="educational">Educational events (conferences, simposiums, discussions...)</string>
    <string name="culture">Culture events (festivals, concerts, plays, art exibitions...)</string>
    <string name="sport">Sport events (tournaments, sport camps, humanitarian races...)</string>
    <string name="humanitarian">Humanitarian events (campaigns for money collecting, auctions...)</string>
    <string name="politic">Government and political events (political meetings, diplomatic visits...)</string>
    <string name="handle_categories_subcategories">Handle Categories/Subcategories</string>
    <string name="handle_events">Handle Events</string>
    <string name="admin">Admin</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="add_category">Add Category</string>
    <string name="type">Type:</string>
    <string name="category">Category:</string>
    <string name="events">Events</string>
    <string name="add_event">Add event</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_type">Select type</string>
    <string name="product">Product</string>
    <string name="sevice">Sevice</string>
    <string name="select_product">Select product</string>
    <string name="select_event">Select Event</string>
    <string name="work_hours">Work hours:</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wendesday">Wendesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="off">Off</string>
    <string name="pick_time">Pick start time</string>
    <string name="pick_end_time">Pick end time</string>
    <string name="time">Time</string>
    <string name="employee_name">Name:</string>
    <string name="employee_phone">Phone:</string>
    <string name="employee_address">Address:</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_email">Email Address</string>
    <string name="employee_password">Password</string>
    <string name="employee_first_name">First Name</string>
    <string name="employee_last_name">Last Name</string>
    <string name="employee_phone_number">Phone Number</string>
    <string name="account_active">Activate Account</string>
    <string name="working_hours_start">Start of Working Hours</string>
    <string name="working_hours_end">End of Working Hours</string>
    <string name="save_employee">Add Employee</string>
    <string name="employee_password_confirm">Confirm Password</string>
    <string name="save">Save</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">End Time</string>
    <string name="event_is_busy">Is Busy</string>
    <string name="save_event">Save Event</string>
    <string name="category_name">Category Name</string>
    <string name="subcategories">Subcategories</string>
    <string name="deactivate">Deactivate</string>
    <string name="private_events_title">Private Events</string>
    <string-array name="age_groups">
        <item>0-3</item>
        <item>3-10</item>
        <item>10-18</item>
        <item>18-30</item>
        <item>30-50</item>
        <item>50-70</item>
        <item>70+</item>
    </string-array>
    <string name="change">Change</string>
    <string name="discountOnly">Discount:</string>
    <string name="new_price">New price:</string>
    <string name="new_discount">New discount:</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="report_management">Report management</string>
    <string name="all_reports">All reports</string>
    <string name="report_by">Reported by:</string>
    <string name="reported">Reported:</string>
    <string name="date_and_time">Date and time:</string>
    <string name="status">Status:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="email_profile">Email:</string>
    <string name="firstname">Firstname:</string>
    <string name="phone">Phone:</string>
    <string name="view_all_ratings">View all ratings</string>
    <string name="title_activity_admin_handle_ratings">AdminHandleRatingsActivity</string>
    <string name="go_to_admin">Go to Admin</string>
    <string name="view_all_reports">View All Reports</string>
    <string name="manage_employees">Manage Employees</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_services">Manage Services</string>
    <string name="manage_packages">Manage Packages</string>
    <string name="manage_ratings">Manage Ratings</string>
    <string name="comment">Comment:</string>
    <string name="rating">Rating:</string>
    <string name="date">Date:</string>
    <string name="reason_for_reporting">Reason for reporting:</string>
    <string name="enter_reason">Enter reason</string>
    <string name="send">Send</string>
    <string-array name="special_requests">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Meat Eater</item>
    </string-array>
    <string name="see_detailed_information">See details</string>
    <string name="reject">Reject</string>
    <string name="manage_rating_reports">Manage Rating Reports</string>
    <string name="reject_reason">Reject reason:</string>
    <string name="id">Id:</string>
    <string name="report_reason">Report reason:</string>
    <string name="reason_for_rejecting">Reason for rejecting:</string>
    <string name="handle_reports">Handle reports</string>
    <string name="view_notifications">View Notifications</string>
</resources>