<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.vlasnik.CreateEmployeeEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/eventStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_start_time"
            android:focusable="false"/>

        <EditText
            android:id="@+id/eventEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_end_time"
            android:focusable="false"/>

        <CheckBox
            android:id="@+id/eventIsBusy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_is_busy"/>

        <Button
            android:id="@+id/buttonSaveEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_event"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
